# GeneralStrategies

./: .gitignore  TA_Lib-0.4.28-cp311-cp311-win_amd64.whl  backtest_runner.py  charts.py  pyproject.toml  report_BTCUSDT.csv  strategy.py  trades_full.csv  u_scrapper.py  youtube_downloader.py  вивап_зона_ценности.py  гаусс_два_канала.py  гаусс_двойной_взо.py  гаусс_зона_ценности.py  гаусс_откат.py  гаусс_пересечение_гаусса.py  гаусс_угол_атаки.py  идеи_для_входа.тхт
core/: __init__.py  data_manager.py  exit_engine.py  indicator_engine.py  param_grid.py  reporting.py  take_profit_config.py  visualization.py  visualization2.py
general/: geleral_get_coins.py  general_clean_bad_kline_data.py  general_correlated_coins.html  general_correlation_analyzer.py  general_get_kline_data.py  general_kama_market_breadth.py  general_kama_speed_market_breadth.html  general_kama_speed_market_breadth.py  general_kama_speed_market_breadth_2.html  general_rsi_market_breadth.html  general_rsi_market_breadth.py
indicators/: __init__.py  adx.py  atr.py  ema.py  hma.py  rsi.py  sma.py  zscore.py
reports/: BTCUSDT_1D_metrics.csv  BTCUSDT_1D_quantstats.html  BTCUSDT_1D_trades.csv  BTCUSDT_1D_trades_full.csv
results/BTCUSDT/12H/20250913_035139_f09ab019/: 20250913_035139_f09ab019_quantstats.html  metrics.csv  params.json
results/BTCUSDT/12H/20250913_035147_b8043407/: 20250913_035147_b8043407_quantstats.html  entry_log.csv  metrics.csv  params.json
results/BTCUSDT/12H/20250913_035742_f09ab019/: 20250913_035742_f09ab019_quantstats.html  (+7 more)
strategies/: __init__.py  rsi_atr_strategy.py
(+126 files in other folders)
