[project]
name = "bt-strategies"
version = "0.1.0"
description = "Backtesting strategies with Backtrader and full control"
authors = [{ name = "wikimodels", email = "young.wiki.models@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  # Core stack
  "numpy>=1.25,<2.0",
  "pandas>=2.2,<2.3",

  # TA indicators
  "TA-Lib==0.6.7",                  # бинарная сборка
  "pandas-ta-classic>=0.3.14b1",    # чистый TA-индикаторный стек

  # Backtesting engine
  "backtrader>=1.9.78.123",         # гибкий, точный

  # Analytics & reporting
  "quantstats>=0.0.70",             # отчёты по стратегии
  "matplotlib>=3.8",                # графики equity, drawdown, сигналы

  # CLI utils
  "tqdm>=4.66",                     # прогресс-бары
  "rich>=13.7",                     # форматированный вывод
  "python-dateutil>=2.8",           # работа с датами
  "ipython>=8.0",  # ✅ нужен для quantstats.reports
  "plotly (>=6.3.0,<7.0.0)",
  "youtube-transcript-api (>=1.2.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
